compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/output.fir.txt
$TMP_DIR$/library-after.jar!/META-INF/main.kotlin_module: error: module was compiled with an incompatible version of Kotlin. The binary version of its metadata is 42.0.0, expected version is $ABI_VERSION$.
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:5:16: error: unresolved reference 'A'.
fun baz(param: A, nested: A.Nested) {
               ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:5:27: error: unresolved reference 'A'.
fun baz(param: A, nested: A.Nested) {
                          ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:6:23: error: unresolved reference 'A'.
    val constructor = A()
                      ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:7:18: error: unresolved reference 'A'.
    val nested = A.Nested()
                 ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:8:22: error: unresolved reference 'getQuux'.
    val quux = param.getQuux()
                     ^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:9:28: error: unresolved reference 'method'.
    val methodCall = param.method()
                           ^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:10:30: error: unresolved reference 'A'.
    val supertype = object : A() {}
                             ^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:12:13: error: unresolved reference 'foo'.
    val x = foo()
            ^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:13:13: error: unresolved reference 'bar'.
    val y = bar
            ^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:14:5: error: unresolved reference 'bar'.
    bar = 239
    ^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongMetadataVersionBadMetadata/source.kt:15:12: error: unresolved reference 'TA'.
    val z: TA = ""
           ^^
COMPILATION_ERROR
